--- a/templates/components/slider.twig
+++ b/templates/components/slider.twig
@@ -1,10 +1,10 @@
 <div class="slider">
 	<div class="slider__nav">
 	<button type="button" class="slider__prev">
-		<img src="./static/images/arrow-prev.svg" alt="Previous">
+		<img src="{{siteUrl}}static/images/arrow-prev.svg" alt="Previous">
 	</button>
 	<button type="button" class="slider__next">
-		<img src="./static/images/arrow-next.svg" alt="Next">
+		<img src="{{siteUrl}}static/images/arrow-next.svg" alt="Next">
 	</button>
 	</div>
 	
