--- a/templates/index.twig
+++ b/templates/index.twig
@@ -6,35 +6,34 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover" />
     <meta name="referrer" content="origin-when-cross-origin" />
-    <link rel="shortcut icon" href="./static/favicon.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="{{siteUrl}}static/favicon.ico" type="image/x-icon" />
 
     <title>Motoventure</title>
 
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;0,700;0,900;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
     
-    <link rel="stylesheet" href="./static/css/styles.css">
+    <link rel="stylesheet" href="{{siteUrl}}static/css/styles.css">
     
 </head>
-<body class="home-page">
+<body class="{{body_classes | default('home-page')}}">
 
   <div class="wrapper">
 
     <header class="header">
       <div class="header__content content-column">
 
-        <a href="./" class="logo">
-          <img src="./static/images/logo.svg" alt="Motoventure">
+        <a href="{{siteUrl}}" class="logo">
+          <img src="{{siteUrl}}static/images/logo.svg" alt="Motoventure">
         </a>
 
         <button type="button" class="nav-toggle">
-          <img src="./static/images/list.svg" alt="Menu" class="icon-open-menu">
-          <img src="./static/images/x.svg" alt="Close Menu" class="icon-close-menu">
+          <img src="{{siteUrl}}static/images/list.svg" alt="Menu" class="icon-open-menu">
+          <img src="{{siteUrl}}static/images/x.svg" alt="Close Menu" class="icon-close-menu">
         </button>
         
         <nav class="nav">
           <a href="stories.html" class="nav__link">Stories</a>
-          <a href="gear.html" class="nav__link">Our Gear</a>
         </nav>
         
       </div>
@@ -49,7 +48,7 @@
     </div>
   </footer>
 
-  <script src="./static/js/scripts.js"></script>
+  <script src="{{siteUrl}}static/js/scripts.js"></script>
 
 </body>
 </html>
